--- a/about.html
+++ b/about.html
@@ -3,40 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About SENTRY</title>
+    <title>SENTRY | Mission</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-anim bg-about">
+<body>
 
     <nav>
-        <a href="index.html" class="logo">
-            <div class="logo-main"><span>⚡</span> SENTRY</div>
-            <div class="logo-sub">Your travel buddy</div>
-        </a>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About</a>
-            <a href="contact.html">Contact</a>
+        <div class="nav-pill">
+            <a href="index.html" class="logo">SENTRY.</a>
+            <div class="nav-links">
+                <a href="index.html">Search</a>
+                <a href="about.html" class="active">Mission</a>
+                <a href="contact.html">Intel</a>
+            </div>
         </div>
     </nav>
 
-    <div class="about-wrapper">
-        <div class="about-card">
-            <div class="about-header">
-                <h1>Platform Vision.</h1>
-                <p class="about-subtitle">
-                    SENTRY aggregates intelligence to protect global travelers with real-time data precision.
-                </p>
-            </div>
-            <div class="vision-grid">
-                <div class="feature-box">
-                    <h3>Live News</h3>
-                    <p>We scan thousands of local reports instantly to detect civil unrest, crime spikes, or weather anomalies before they impact your journey.</p>
+    <div class="subpage-hero">
+        <div class="content-container">
+            <h1 class="page-title">THE SENTRY<br>PROTOCOL.</h1>
+            <p class="page-subtitle">We believe preparation is better than struggling</p>
+
+            <div class="mission-grid">
+                
+                <div class="mission-card">
+                    <span class="mission-icon">🧭</span>
+                    <h3 class="mission-title">INTELLIGENT PREP</h3>
+                    <p class="mission-desc">We aggregate multi-source data to replace uncertainty with calculated risk assessment before you ever step foot on the trail.</p>
                 </div>
-                <div class="feature-box">
-                    <h3>Geospatial</h3>
-                    <p>Pinpoint accuracy using OpenStreetMap data ensures you know exactly where the safe zones are, visualizing risk on a granular level.</p>
+
+                <div class="mission-card">
+                    <span class="mission-icon">🏔️</span>
+                    <h3 class="mission-title">RESPECT THE TERRAIN</h3>
+                    <p class="mission-desc">Mountains are indifferent to hubris. Our goal is to equip you with the knowledge to navigate them humbly and safely.</p>
                 </div>
+
+                <div class="mission-card">
+                    <span class="mission-icon">📡</span>
+                    <h3 class="mission-title">GLOBAL WATCH</h3>
+                    <p class="mission-desc">Monitoring geopolitical stability and localized threats in real-time, ensuring your adventure doesn't become an international incident.</p>
+                </div>
+
             </div>
         </div>
     </div>
