--- a/contact.html
+++ b/contact.html
@@ -3,50 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact SENTRY</title>
+    <title>SENTRY | Secure Comms</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-anim bg-contact">
+<body>
 
     <nav>
-        <a href="index.html" class="logo">
-            <div class="logo-main"><span>⚡</span> SENTRY</div>
-            <div class="logo-sub">Your travel buddy</div>
-        </a>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html" class="active">Contact</a>
+        <div class="nav-pill">
+            <a href="index.html" class="logo">SENTRY.</a>
+            <div class="nav-links">
+                <a href="index.html">Search</a>
+                <a href="about.html">Mission</a>
+                <a href="contact.html" class="active">Intel</a>
+            </div>
         </div>
     </nav>
 
-    <div class="contact-wrapper">
-        <div class="form-card">
-            <div class="form-header">
-                <h1>Get in Touch.</h1>
-                <p style="color: var(--text-sec); font-size: 1.1rem;">
-                    We'd love to hear from you.
-                </p>
+    <div class="subpage-hero">
+        <div class="content-container" style="max-width: 600px;"> <h1 class="page-title">SECURE<br>CHANNEL.</h1>
+            <p class="page-subtitle">Establish uplink for briefing or intel submission.</p>
+
+            <div class="glass-container-dark">
+                <form action="https://formspree.io/f/xqedznwo" method="POST">
+                    
+                    <div>
+                        <label class="form-label">Codename / Identification</label>
+                        <input type="text" name="name" class="form-input" placeholder="e.g., Ranger Alpha" required>
+                    </div>
+
+                    <div>
+                        <label class="form-label">Secure Frequency (Email)</label>
+                        <input type="email" name="email" class="form-input" placeholder="agent@sentry.net" required>
+                    </div>
+
+                    <div>
+                        <label class="form-label">Briefing Notes</label>
+                        <textarea name="message" class="form-input" placeholder="Transmit your message..." required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn-accent">TRANSMIT DATA</button>
+                </form>
             </div>
 
-            <form action="https://formspree.io/f/xqedznwo" method="POST">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" class="form-control" placeholder="John Doe" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" placeholder="john@example.com" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" class="form-control" placeholder="Type your message..." required></textarea>
-                </div>
-
-                <button type="submit" class="btn-block">Send Message</button>
-            </form>
         </div>
     </div>
 
