Changed the api key

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script>
         // --- CONFIG ---
-        const GNEWS_API_KEY = '7cb75b2e8434e01dc69dbf581e95d974';
+        const GNEWS_API_KEY = 'YOUR_API_KEY_HERE'; // Replace with your GNews API key
         
         // --- DATABASES ---
         const RISK_DB = {
